--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: rgba(100, 98, 98, 0.966);
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
