ajustando cores e select de datas

--- a/frontend/src/components/styles.css
+++ b/frontend/src/components/styles.css
@@ -38,7 +38,7 @@
     flex-grow: 1;
     padding: 20px;
     border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     height: 600px; /* Increase the height to make the charts taller */
     width: 700px /* Increase the width to make the charts wider */
